[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hmetrics"
version = "0.1.0"
description = "H-plot style statistical comparisons (box/point/violin) with pairwise tests and annotations."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "You"}]
dependencies = [
  "pandas>=1.4",
  "numpy>=1.22",
  "matplotlib>=3.5",
  "seaborn>=0.12",
  "pingouin>=0.5.0",
  "statannotations>=0.6.0"  # for Annotator
]

[tool.setuptools.packages.find]
where = ["src"]