[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hmetrics"
version = "0.1.0"
description = "Group-wise statistical plots with pairwise tests and significance stars."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [{name = "Chao H. Huang"}]

dependencies = [
    "pandas>=1.3",
    "numpy>=1.21",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "pingouin>=0.5.0",
    "statannotations>=0.6.0",
    ]
    
[project.urls]
Homepage = "https://github.com/huangch/hmetrics"

[project.scripts]
hmetrics-plot = "hmetrics.cli:main"